syntax = "proto3";

package file;

service FileService {
    rpc GenerateKey(GenerateKeyRequest) returns (KeyResponse) {}
    rpc CreateUpload(CreateUploadRequest) returns (CreateUploadResponse) {}
    rpc UpdateUploadID(UpdateUploadIDRequest) returns (UpdateUploadIDResponse) {}
    rpc GetUploadByID(GetUploadByIDRequest) returns (GetUploadByIDResponse) {}
    rpc DeleteUploadByID(DeleteUploadByIDRequest) returns (DeleteUploadByIDResponse) {}
    rpc GetFileByID(GetByFileByIDRequest) returns (File) {}
    rpc GetFileByKey(GetFileByKeyRequest) returns (File) {}
    rpc GetFilesByFolder(GetFilesByFolderRequest) returns (GetFilesByFolderResponse) {}
    rpc CreateFile(CreateFileRequest) returns (File) {}
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {}
    rpc UpdateFile(UpdateFileRequest) returns (File) {}
    rpc IsAllowed(IsAllowedRequest) returns (IsAllowedResponse) {}
}

message CreateUploadRequest {
    string bucket = 1;
    string name = 2;
}

message CreateUploadResponse {
    string key = 1;
    string bucket = 2;
}

message GenerateKeyRequest {
    string bucket = 1;
}

message KeyResponse {
    string key = 1;
}

message UpdateUploadIDRequest {
    string key = 1;
    string uploadID = 2;
    string bucket = 3;
}

message UpdateUploadIDResponse {

}

message GetUploadByIDRequest {
    string uploadID = 1;
}

message GetUploadByIDResponse {
    string key = 1;
    string bucket = 2;
    string uploadID = 3;
    string name = 4;
}

message DeleteUploadByIDRequest {
    string uploadID = 1;
}

message DeleteUploadByIDResponse {

}

message GetByFileByIDRequest {
    string id = 1;
}

message GetFileByKeyRequest {
    string key = 1;
}

message GetFilesByFolderRequest {
    string folderID = 1;
    string ownerID = 2;
}

message GetFilesByFolderResponse {
    repeated File files = 1;
}

message CreateFileRequest {
    string key = 1;
    string name = 2;
    int64 size = 3;
    string type = 4;
    string ownerID = 5;
    string bucket = 6;
    string parent = 7;
    string appID = 8;
}

message DeleteFileRequest {
    string id = 1;
}

message DeleteFileResponse {
    bool ok = 1;
}

message UpdateFileRequest {
    string name = 2;
    int64 size = 3;
    string ownerID = 5;
    string parent = 6;
    string appID = 7;
    string bucket = 11;
}

message IsAllowedRequest {
    string fileID = 1;
    string userID = 2;
}

message IsAllowedResponse {
    bool allowed = 1;
}

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string mail = 4;
}

message App {
    string id = 1;
    string name = 2;
}

message File {
    string id = 1;
    string key = 2;
    string name = 3;
    string type = 4;
    string description = 5;
    string ownerID = 6;
    int64 size = 7;
    oneof fileOrId {
        string parent = 8;
        File parentObject = 9;
    }
    string bucket = 10;
    int64 createdAt = 11;
    int64 updatedAt = 12;
}
